--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   line-height: 24px;
   font-weight: 400;
 
+  --color-text: rgba(255, 255, 255, 0.87);
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -60,6 +61,7 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
+    --color-text: #213547;
   }
   a:hover {
     color: #747bff;
