--- a/src/app.css
+++ b/src/app.css
@@ -5,21 +5,10 @@
   width: 100%;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.preact:hover {
-  filter: drop-shadow(0 0 2em #673ab8aa);
+h1 {
+  font-size: clamp(1.2rem, 1rem + 3vw, 2rem);
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+h2 {
+  font-size: clamp(1.1rem, 0.9rem + 2vw, 1.5rem);
 }
