--- a/src/components/ThemePicker/ThemePicker.module.css
+++ b/src/components/ThemePicker/ThemePicker.module.css
@@ -7,6 +7,13 @@
   width: 100%;
 }
 
+@media screen and (min-width: 1440px) {
+  .container {
+    justify-content: center;
+    gap: 80px;
+  }
+}
+
 .category {
   display: flex;
   flex-direction: column;
